# partner-ai-sap

./: README.md
01-tutorials/: README.md
01-tutorials/01-adk-btp-simple/: README.md
01-tutorials/01-adk-btp-simple/adk-btp-simple-api/: main.py  manifest.yml  pyproject.toml
01-tutorials/02-adk-btp-secure/: README.md
01-tutorials/02-adk-btp-secure/adk-btp-simple-agent/app/: agent.py
01-tutorials/02-adk-btp-secure/adk-btp-simple-api-test/: main.py
01-tutorials/03-adk-btp-secure-apim/: .gitignore  README.md
01-tutorials/03-adk-btp-secure-apim/adk-btp-apim/: .gitignore  main.py  pyproject.toml
01-tutorials/03-adk-btp-secure-apim/adk-btp-apim/PolicyTemplateForADK/PolicyTemplateContainer/: PrincipalPropagationForADK.xml
01-tutorials/03-adk-btp-secure-apim/adk-btp-apim/PolicyTemplateForADK/PolicyTemplateContainer/FileResource/: overrideResponseForDebug.js  prepareRequest.js
01-tutorials/03-adk-btp-secure-apim/adk-btp-apim/PolicyTemplateForGEAP/PolicyTemplateContainer/: PrincipalPropagationForGEAP.xml
01-tutorials/03-adk-btp-secure-apim/adk-btp-simple-agent/: .gitignore
01-tutorials/03-adk-btp-secure-apim/adk-btp-simple-agent/app/: agent.py
01-tutorials/03-adk-btp-secure-apim/adk-btp-simple-api-test/: main.py  pyproject.toml
01-tutorials/04-adk-btp-a2a/: .gitignore  README.md
01-tutorials/04-adk-btp-a2a/adk-btp-a2a-agent/: agent.py  context_store.py  main.py  manifest.yml  pyproject.toml  xs-security.json
01-tutorials/04-adk-btp-a2a/adk-btp-a2a-client/: main.py  pyproject.toml
(+17 files in other folders)
