# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "adk-btp-a2a-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[fastapi,http-server]>=0.3.26",
    "cfenv>=0.5.3",
    "fastapi>=0.139.0",
    "google-adk[a2a]>=2.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sap-xssec>=4.2.2",
    "uvicorn>=0.51.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
