[project]
name = "adk-btp-a2a-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]


[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
